# sma-curtail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
scripts/: backtest_grey_zone.py  curtail_test.py
src/sma/: __init__.py  __main__.py  client.py  config.py  control.py  curtailment.py  domain.py  ecopower.py  evcc.py  registers.py
src/sma/adapters/: influx_metering.py  influx_price.py  influx_writer.py  modbus_actuator.py  mqtt_publisher.py  solar_forecast.py
src/sma/web/: server.py  state.py
src/sma/web/static/: app.js
src/sma/web/templates/: index.html
tests/: test_curtailment.py  test_ecopower.py  test_registers.py  test_web.py
